force-app/src/objects/AccreditationHistory__c.object
<CustomObject>
    <description>Custom object created to record changes in the Accreditation model for CRM analytics. It supports the following types: String, Picklist, Boolean, Integer, Double, Percent, ID, Date, DateTime, URL, or Email. Values will be stored as a string. Configuration via custom metadata type.</description>
    <fields>
        <fullName>DateTimeStamp__c</fullName>
        <label>DateTimeStamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FieldAPIName__c</fullName>
        <label>Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalId>true</externalId>
        <label>Parent Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectTypeName__c</fullName>
        <label>SObjectType Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Accreditation History</label>
    <nameField>
        <displayFormat>ACH-{0000}</displayFormat>
        <label>Accreditation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accreditation History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>